<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>safe_teleop_realtime</name>
  <version>0.1.0</version>
  <description>Real-time collision detection for SafeTeleOp (Slave system - C++)</description>

  <maintainer email="dev@safeteleop.ai">SafeTeleOp Dev Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- nvblox for ESDF -->
  <depend>nvblox_msgs</depend>

  <!-- Custom messages -->
  <depend>safe_teleop_core</depend>

  <!-- C++ libraries -->
  <depend>eigen</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
